#643: Added Order Type object and queries